--- a/package.json
+++ b/package.json
@@ -30,5 +30,17 @@
   "dependencies": {
     "findit": "^2.0.0",
     "pkginfo": "^0.3.0"
+  },
+  "devDependencies": {
+    "blanket": "^1.1.7",
+    "chai": "^3.0.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-mocha-test": "^0.12.7",
+    "load-grunt-tasks": "^3.2.0",
+    "mocha": "^2.2.5",
+    "sinon": "^1.15.4",
+    "sinon-chai": "^2.8.0"
   }
 }
