--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-mocha-test": "^0.12.7",
+    "grunt-release": "^0.13.0",
     "load-grunt-tasks": "^3.2.0",
     "mocha": "^2.2.5",
     "sinon": "^1.15.4",
