--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "grunt-release": "^0.13.0",
     "load-grunt-tasks": "^3.2.0",
     "mocha": "^2.2.5",
+    "rewire": "^2.3.4",
     "sinon": "^1.15.4",
     "sinon-chai": "^2.8.0"
   }
